force-app/main/default/objects/Competitor_Observation__c/Competitor_Observation__c.object-meta.xml
<CustomObject>
    <label>Competitor Observation</label>
    <pluralLabel>Competitor Observations</pluralLabel>
    <description>Competitor Observation</description>
    <nameField>
        <label>Competitor Observation Name</label>
        <type>AutoNumber</type>
        <displayFormat>CMP-{000000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>