force-app/main/default/objects/Competitor_Observation__c/fields/Competitor_Name__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Name__c</fullName>
    <label>Competitor Name</label>
    <type>Text</type>
    <length>80</length>
    <description>Competitor Name</description>
</CustomField>