force-app/main/default/objects/Competitor_Observation__c/fields/Sales_Visit__c.field-meta.xml
<CustomField>
    <fullName>Sales_Visit__c</fullName>
    <label>Sales Visit</label>
    <type>Lookup</type>
    <referenceTo>Sales_Visit__c</referenceTo>
    <relationshipLabel>Competitor Observations</relationshipLabel>
    <relationshipName>Competitor_Observations</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Sales Visit</description>
</CustomField>